# sdl-boilerplate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  imgui.ini
Engine/: CMakeLists.txt  Core.h  Engine.h  EntryPoint.h  GameEngine.cpp  GameEngine.h  PrecompiledHeader.h
Engine/src/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  EventManager.cpp  EventManager.h  GameEvent.h  InputManager.cpp  InputManager.h
Engine/src/ECS/: ComponentStorage.h  Entity.h  EntityManager.cpp  EntityManager.h
Engine/src/ECS/component/: AnimationComponent.h  SpriteComponent.h  TransformComponent.h  VelocityComponent.cpp  VelocityComponent.h
Engine/src/ECS/system/: AnimationSystem.h
Engine/src/SDL/: SDLEventDispatcher.cpp  SDLEventDispatcher.h  SDLEventHandler.cpp  SDLEventHandler.h
Engine/src/math/: Vector2D.h
Game/: CMakeLists.txt  Game.cpp  Game.h
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake  sdl2-config.cmake
src/: main.cpp
src/engine/: GameEvent.h
